--- a/Valentinstag/index.html
+++ b/Valentinstag/index.html
@@ -10,6 +10,7 @@
   <div class="container">
     <h1>Will you be my Valentine? 💖</h1>
     <img src="gifsUndBilder/cat-couple-cute-cats.gif" alt="Cute animation" class="animation">
+    <img src="gifsUndBilder/silent-tears.gif" alt="Sad animation" class="animation" id="sad-cat-image" hidden></img>
     <button id="yes-btn">Yes</button>
     <button id="no-btn">No</button>
   </div>
