Beschreibung der Änderungen

--- a/Valentinstag/index.html
+++ b/Valentinstag/index.html
@@ -9,8 +9,8 @@
 <body>
   <div class="container">
     <h1>Will you be my Valentine? 💖</h1>
-    <img src="gifsUndBilder/cat-couple-cute-cats.gif" alt="Cute animation" class="animation">
-    <img src="gifsUndBilder/silent-tears.gif" alt="Sad animation" class="animation" id="sad-cat-image" hidden></img>
+    <img src="gifsUndBilder/cat-couple-cute-cats.gif" alt="Cute animation" class="animation" id="cute-cat-image">
+    <img src="gifsUndBilder/silent-tears.gif" alt="Sad animation" class="animation hidden" id="sad-cat-image">
     <button id="yes-btn">Yes</button>
     <button id="no-btn">No</button>
   </div>
