Beschreibung der Änderungen

--- a/Valentinstag/index.html
+++ b/Valentinstag/index.html
@@ -18,6 +18,7 @@
   <div id="response-overlay" class="hidden">
     <div class="response-box">
       <h2>Yay! ❤️ You're my Valentine!</h2>
+      <img src="gifsUndBilder/happy-dance.gif" alt="Valentine GIF" class="popup-gif">
       <button id="close-overlay">Close</button>
     </div>
   </div>
