Beschreibung der Änderungen

--- a/Valentinstag/index.html
+++ b/Valentinstag/index.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+  <img src="gifsUndBilder/adventure-love.jpg" class="heart-image" id="adventure-love">
+  <img src="gifsUndBilder/hitting-love.jpg" class="heart-image" id="hitting-love">
+  <img src="gifsUndBilder/muscel-love.jpg" class="heart-image" id="muscel-love">
+  <img src="gifsUndBilder/peace-love.jpg" class="heart-image" id="peace-love.">
+  <img src="gifsUndBilder/potato-lovejpg.jpg" class="heart-image" id="potato-love">
+  <img src="gifsUndBilder/potato2-love.jpg" class="heart-image" id="potato2-love">
+  <img src="gifsUndBilder/sunny-love.jpg" class="heart-image" id="sunny-love">
+
   <div class="container">
     <h1>Will you be my Valentine? 💖</h1>
     <img src="gifsUndBilder/cat-couple-cute-cats.gif" alt="Cute animation" class="animation" id="cute-cat-image">
